avoid break inside an heading

--- a/src/assets/styles/_elements.sections.css
+++ b/src/assets/styles/_elements.sections.css
@@ -44,4 +44,5 @@ h4,
 h5,
 h6 {
   @extend .u-break-after-avoid;
+  @extend .u-break-inside-avoid;
 }
